--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Kaspa-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your voice. Your ideas.</title>
+    <title>Your voice. Your ideas. Uncensored.</title>
     <style>
       /* Splash screen styles - inline to show immediately */
       #initial-splash {
